welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: ')' expected but ':' found.
while (eatSurMessage():Boolean:) {
                              ^BDRBuggle:75: error: illegal start of simple expression
	}
        ^